Results are present within this file itself.

--- a/EE2802_FinalProject/EE2802_FinalProject_Code.ipynb
+++ b/EE2802_FinalProject/EE2802_FinalProject_Code.ipynb
@@ -19,6 +19,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Note that the results are within this file itself; all results obtained were by changing country_name"
         "import numpy as np\n",
         "import pandas as pd\n",
         "import tensorflow as tf\n",
